@@ -17,6 +17,7 @@ src += MCDoc.cpp
 src += MCMainFrame.cpp
 src += MCToolBase.cpp
 src += MCToolCloneBrush.cpp
+src += MCToolColorPicker.cpp
 src += MCToolDots.cpp
 src += MCToolFill.cpp
 src += MCToolFreehand.cpp
@@ -32,6 +33,7 @@ src += MCBlockPanel.cpp
 res :=
 res += 16x16/clone.png
 res += 16x16/color_fill.png
+res += 16x16/colorpicker.png
 res += 16x16/dots.png
 res += 16x16/fileclose.png
 res += 16x16/filenew.png
@@ -49,6 +51,7 @@ res += 16x16/zoomin.png
 res += 16x16/zoomout.png
 res += 24x24/clone.png
 res += 24x24/color_fill.png
+res += 24x24/colorpicker.png
 res += 24x24/dots.png
 res += 24x24/fileclose.png
 res += 24x24/filenew.png
@@ -65,6 +68,12 @@ res += 24x24/tv.png
 res += 24x24/undo.png
 res += 24x24/zoomin.png
 res += 24x24/zoomout.png
+res += cursors/colorpicker.png
+res += cursors/clonebrush.png
+res += cursors/dots.png
+res += cursors/floodfill.png
+res += cursors/freehand.png
+res += cursors/lines.png
 res += README.icons.txt
 res += lgpl-2.1.txt
 
